@@ -60,7 +60,7 @@ En	De	Es	Filename
 -	-	-	RevisionGraph.png
 -	-	-	RightDragMenu.png
 -	-	-	SettingsColors.png
--	-	-	SettingsContext.png
+#	#	#	SettingsContext.png
 -	-	-	SettingsDialog.png
 -	-	-	SettingsGeneral.png
 #	-	#	SettingsMain.png
