@@ -367,9 +367,9 @@
 #define IDS_PROGRS_COPY_WARNING         1238
 #define IDC_EXTERNALWARNING             1238
 #define IDS_PROGRS_COMMITT_TRUNK        1239
-#define IDC_BUTTON1                     1239
 #define IDC_SOUNDS                      1239
 #define IDS_PROGRS_REVERTMARKERS        1240
+#define IDC_ENABLEACCELERATORS          1240
 #define IDS_SETTINGS_SELECTDIFF         1241
 #define IDS_SETTINGS_SELECTDIFFVIEWER   1242
 #define IDS_SETTINGS_SELECTMERGE        1243
@@ -585,6 +585,7 @@
 #define IDS_SETTINGS_USEWCURL_TT        3117
 #define IDS_SETTINGS_SPELLCHECKER_TT    3118
 #define IDS_SETTINGS_REPOCHECK_TT       3119
+#define IDS_SETTINGS_OWNERDRAWN_TT      3120
 #define IDS_CHECKNEWER_YOURVERSION      3200
 #define IDS_CHECKNEWER_CURRENTVERSION   3201
 #define IDS_CHECKNEWER_YOURUPTODATE     3202
@@ -701,7 +702,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        211
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1240
+#define _APS_NEXT_CONTROL_VALUE         1241
 #define _APS_NEXT_SYMED_VALUE           195
 #endif
 #endif
